--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "url": "https://github.com/poupotte/test-controller.git"
   },
   "dependencies": {
-    "americano": "0.3.10",
-    "americano-cozy": "0.2.8",
-    "forever-monitor": "1.3.0"
+    "coffee-script": "latest"
   },
   "devDependencies": {
     "winston-loggly": "0.6.0",
